2.10.0
removed factory station (its use was replaced by the more interesting currency system and modify station)
added azure's gui overlay option
fix modify station tooltips a bit
player lvl up token and config removed
try fix player vanilla lvls being wrong after teleporting to maps
changed config from common to server so it syncs automatically to clients. 
nerfed crit rate talents
nerfed wand aoe 
talent tree now reminds you which button to click to show more stat info
trait stats now use same keybind to show more info
map device no longer can increase tier or lvl of maps, its now done through currency items in modify station
group maps no longer require standing near the person sacrificing the map, you can now click a button on the map device gui
to sacrifice a map, just right click map device with the map
map isnt used up anymore if there isn't enough space for portals
stations now tick more smoothly
salvaging maps now gives map related currencies or ores only.
added map currencies like +tier +lvl etc
overlay now updates more often to be smoother
map back pearl now teleports back instantly
hud should be back faster now after changing dimensions