@@ -4,6 +4,11 @@ import com.robertx22.mine_and_slash.mmorpg.Ref;
 import com.robertx22.mine_and_slash.uncommon.interfaces.IAutoLocName;
 
 public enum Words implements IAutoLocName {
+    Bad("Bad"),
+    Good("Good"),
+    Average("Average"),
+    Great("Great"),
+    Amazing("Amazing"),
     CurrencyCrate("Crafter's Paradise Crate"),
     RuneCrate("Runecrafter's Crate"),
     CommonerCrate("Commoner's Dream Crate"),
