@@ -19,3 +19,4 @@ added map currencies like +tier +lvl etc
 overlay now updates more often to be smoother
 map back pearl now teleports back instantly
 hud should be back faster now after changing dimensions
+adventure map bonus loot is now smaller cus i'm adding loot crate as completition reward
